--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,11 +1,19 @@
 mixin storeForm(store = {})
-  form(action=`/add/${store._id || ''}` method="POST" class="card")
+  form(action=`/add/${store._id || ''}` method="POST" class="card" enctype="multipart/form-data") 
+    pre= h.dump()
+    
     label(for="name") Name
     input(type="text" name="name" value=store.name)
     label(for="description") Description
     textarea(name="description")= store.description
 
-    // address, lng and lat
+    //- Image upload
+    label(for="photo") Photo
+      input(type="file" id="photo" name="photo" accept="image/gif, image/png, image/jpeg")
+      if store.photo
+        img(src=`/uploads/${store.photo}`, alt=store.name width=200)
+
+    //- address, lng and lat
     label(for="address") Address
     input(type="text" name="location[address]" id="address" value=(store.location && store.location.address))
     label(for="lng") Address Lng
