--- a/views/mixins/_storeCard.pug
+++ b/views/mixins/_storeCard.pug
@@ -2,6 +2,13 @@ mixin storeCard(store = {})
   .store
     .store__hero
       .store__actions
+        if user
+          .store__action.store__action--heart
+            form.heart(method="POST" action=`/api/stores/${store._id}/heart`)
+              - const heartStrings = user.hearts.map(heart => heart.toString())
+              - const heartClass = heartStrings.includes(store._id.toString()) ? 'heart__button--hearted' : ''
+              button.heart__button(type="submit" name="heart" class=heartClass)
+                != h.icon('heart')
         if user && store.author.equals(user._id)
           .store__action.store__action--edit
           a(href=`/stores/${store._id}/edit`)
@@ -9,5 +16,5 @@ mixin storeCard(store = {})
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title
         a(href=`/store/${store.slug}`) #{store.name}
-      .store__details
-        p= store.description.split(' ').slice(0, 25).join(' ')
+    .store__details
+      p= store.description.split(' ').slice(0, 25).join(' ')
