--- a/views/store.pug
+++ b/views/store.pug
@@ -1,15 +1,16 @@
 extends layout
 
-include mixins/_storeCard
-
 block content
   .single
     .single__hero
       img.single__image(src=`/uploads/${store.photo || 'store.png'}`)
+      h2.title.title--single
+        a(href=`/stores/${store.slug}`) #{store.name}
 
-    .single__details.inner
-      img.single__map(src=h.staticMap(store.location.coordinates))
-      p.single__location= store.location.address 
+  .single__details.inner
+    img.single__map(src=h.staticMap(store.location.coordinates))
+    p.single__location= store.location.address
+    p= store.description
 
     if store.tags
       ul.tags
